<resources>
    <string name="app_name">Tripcito503</string>
    <string name="correo_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="ir_registro">¿No tienes cuenta? Regístrate</string>
    <string name="ir_login">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="error_campos_vacios">Todos los campos son obligatorios</string>
    <string name="titulo_registro">Crear cuenta</string>
    <string name="error_password_corta">La contraseña debe tener al menos 6 caracteres</string>
    <string name="btn_editar">Editar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="agregar_destino">Agregar destino</string>
    <string name="titulo_crear">Nuevo destino</string>
    <string name="nombre_hint">Nombre del destino</string>
    <string name="precio_hint">Precio</string>
    <string name="descripcion_hint">Descripción (mínimo 20 caracteres)</string>
    <string name="btn_seleccionar_imagen">Seleccionar imagen</string>
    <string name="btn_guardar">Guardar</string>
    <string name="error_precio_invalido">El precio debe ser un número mayor a 0</string>
    <string name="error_descripcion_corta">La descripción debe tener al menos 20 caracteres</string>
    <string name="error_imagen_requerida">Debes seleccionar una imagen</string>

    <string-array name="lista_paises">
        <item>El Salvador</item>
        <item>México</item>
        <item>España</item>
        <item>Costa Rica</item>
        <item>Colombia</item>
        <item>Francia</item>
        <item>Japón</item>
    </string-array>

    <string name="confirmar_eliminar_titulo">Eliminar destino</string>
    <string name="confirmar_eliminar_mensaje">¿Estás seguro de que deseas eliminar este destino? Esta acción no se puede deshacer.</string>
    <string name="si">Sí</string>
    <string name="cancelar">Cancelar</string>

    <string name="btn_cerrar_sesion">Cerrar sesión</string>
    <string name="titulo_login">Bienvenido de vuelta</string>
    <string name="subtitulo_login">Inicia sesión para gestionar tus destinos</string>
    <string name="titulo_catalogo">Mis Destinos</string>
    <string name="titulo_pais">País</string>
</resources>